k8s/employees/employees-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-service
spec:
  replicas: 2
  strategy:
    type: Recreate # Keeps things safe for Prisma migrations
  selector:
    matchLabels:
      app: employees-service
  template:
    metadata:
      labels:
        app: employees-service
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: employees-container
        image: mrmonster786/rnr-backend-base:latest 
        imagePullPolicy: Always
        args: ["python", "-m", "uvicorn", "src.employees.main:app", "--host", "0.0.0.0", "--port", "8003"]
        ports:
        - containerPort: 8003
        resources:
          requests:
            memory: "200Mi"  
            cpu: "100m"
          limits:
            memory: "512Mi"  
            cpu: "500m"      
---
apiVersion: v1
kind: Service
metadata:
  name: employees-service
spec:
  selector:
    app: employees-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
