k8s/employees/employee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress # Unique name per file
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://api.rnr.local:30119,http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    # Essential: This maps api.rnr.local/v1/employee/docs -> employee-service:8003/v1/employee/docs
    nginx.ingress.kubernetes.io/rewrite-target: /v1/employee/$2
spec:
  ingressClassName: nginx
  rules:
  - host: api.rnr.local
    http:
      paths:
      - path: /v1/employee(/|$)(.*) # This captures the "anything" after /v1/employee as group $2
        pathType: ImplementationSpecific
        backend:
          service:
            name: employee-service
            port:
              number: 8003
